--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Aluraflix</title>
+    <title> Aluraflix 4 </title>
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <header>ALURAFLIX projeto 4 </header>
 
     <section>
         <div class="chamada-texto">
