--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-
+        </section> <!-- fechar a seção aqui e nao la embaixo -->
 
         <section>
             <h2>Filmes e séries</h2>
@@ -44,7 +44,7 @@
                 </a>
             </div>
         </section>
-    </section>
+    </section> <!-- seção fechada no local errado -->
 
 </body>
 
