--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </a>
             </div>
         </section>
-    </section> <!-- seção fechada no local errado -->
+    <!-- </section> seção fechada no local errado -->
 
 </body>
 
