--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header>ALURAFLIX projeto 4 </header>
+    <header>ALURAFLIX PROJETO 4 </header>
 
     <section>
         <div class="chamada-texto">
